; ModuleID = '/home/carl/AnghaBench/reactos/ntoskrnl/kdbg/amd64/extr_i386-dis.c_KdbpPrintAddressInCode.c'
source_filename = "/home/carl/AnghaBench/reactos/ntoskrnl/kdbg/amd64/extr_i386-dis.c_KdbpPrintAddressInCode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.disassemble_info = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"<%p>\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, %struct.disassemble_info*)* @KdbpPrintAddressInCode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @KdbpPrintAddressInCode(i64 %0, %struct.disassemble_info* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.disassemble_info*, align 8
  store i64 %0, i64* %3, align 8
  store %struct.disassemble_info* %1, %struct.disassemble_info** %4, align 8
  %5 = load i64, i64* %3, align 8
  %6 = inttoptr i64 %5 to i8*
  %7 = call i32 @KdbSymPrintAddress(i8* %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %12, label %9

9:                                                ; preds = %2
  %10 = load i64, i64* %3, align 8
  %11 = call i32 @DbgPrint(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i64 %10)
  br label %12

12:                                               ; preds = %9, %2
  ret void
}

declare dso_local i32 @KdbSymPrintAddress(i8*) #1

declare dso_local i32 @DbgPrint(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
